[package]
name = "mustcc"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
cranelift-codegen = { version = "0.125.3", features = ["riscv64", "x86"] }
cranelift-frontend = "0.125.3"
cranelift-module = "0.125.3"
cranelift-object = "0.125.3"
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }

[dev-dependencies]
assert_cmd = "2.1.1"

[build-dependencies]
lalrpop = "0.22.2"
